--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Portfolio website</title>
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css') }}">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css') }}" media="screen" >
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
 			<a href="#channel" class="btn">Subscribe</a>
 		</nav>
 
-		<div class="content">
+		<div class="content">d:dd
 			<h4>Hello, my name is</h4>
 			<h1>Akubueze <span>DEL-Wealth</span></h1>
 			<h3>I'm a Python/ML/AI Developer.</h3>
