--- a/static/css/del-port.css
+++ b/static/css/del-port.css
@@ -302,7 +302,7 @@ footer{
         background-color: rgb(0, 0, 0);
         }
         .about-me{
-            background:url(../Del-port/static/img/10kk.jpg) ;
+            background:url(../img/10kk.jpg) ;
             background-color: rgb(16, 16, 16);
             background-size:cover;
         }
